--- a/gen_category.ipynb
+++ b/gen_category.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "from openpyxl import load_workbook\n",
     "from openpyxl.styles import PatternFill\n",
-    "filein =  '/Users/zhubo/Documents/中美对话周期.xlsx'\n",
+    "filein =  './content/中美对话周期.xlsx'\n",
     "wb = load_workbook(filename = filein)\n",
     "sheet_ranges = wb['市场高度']\n",
     "index = 2\n",
@@ -24,6 +24,12 @@
   {
    "cell_type": "code",
    "execution_count": 301,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -35,17 +41,17 @@
    ],
    "source": [
     "print(category)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 302,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -67,17 +73,17 @@
     "        all_array.extend(row[1:])\n",
     "    print(existing)\n",
     "    print(all_array)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 303,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -94,26 +100,28 @@
     "        continue\n",
     "    others.append(s)\n",
     "print(others)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
    "source": [
     "for item in existing:\n",
     "    if item[0] not in wb.sheetnames:\n",
@@ -121,19 +129,17 @@
     "    if '其他' not in wb.sheetnames:\n",
     "        ws = wb.create_sheet('其他')\n",
     "wb.save(filein)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "execution_count": 304,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 305,
    "outputs": [],
    "source": [
     "def get_cate(cate):\n",
@@ -141,17 +147,17 @@
     "        if cate in item:\n",
     "            return item[0]\n",
     "    return '其他'"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
+   },
    "outputs": [],
    "source": [
     "index = 2\n",
@@ -159,42 +165,36 @@
     "    cate = sheet_ranges['c{0}'.format(index)].value\n",
     "    index = index + 1\n",
     "    fix_cate = get_cate(cate)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 307,
+   },
    "outputs": [],
    "source": [
     "wb['基建']['d5'].value=wb['市场高度']['d5'].value\n",
     "wb['基建']['e5'].value=wb['市场高度']['e5'].value\n",
     "wb['基建']['e5'].fill=PatternFill(\"solid\", fgColor=wb['市场高度']['e5'].fill.bgColor)\n",
     "wb.save(filein)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 307,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
